[project]
name = ""
version = ""
description = ""
authors = [
    {name = "saydur", email = "saydur@co.design"},
]
dependencies = []
requires-python = ">=3.8"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"



[tool.pdm.scripts]
test = "python -m unittest"